--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-spring/web": "^9.7.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.5.0",
     "react-spinners": "^0.15.0"
   },
