--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@react-spring/web": "^9.7.5",
+    "framer-motion": "^12.6.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "react-spinners": "^0.15.0"
   },
